# This Makefile.am is in the public domain
anastasisincludedir = $(includedir)/anastasis

anastasisinclude_HEADERS = \
  platform.h gettext.h \
  anastasis_authorization_lib.h \
  anastasis_authorization_plugin.h \
  anastasis_crypto_lib.h \
  anastasis_database_lib.h \
  anastasis_database_plugin.h \
  anastasis_eufin_lib.h \
  anastasis_error_codes.h \
  anastasis_redux.h \
  anastasis_service.h \
  anastasis_testing_lib.h \
  anastasis_util_lib.h \
  anastasis.h
